[package]
name = "ZmkBatteryClient"
version = "0.1.0"
edition = "2024"

[dependencies]
args = "2.2.0"
bluer = { version = "0.17.4", features = ["full"] }
env_logger = "0.11.8"
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.19.0"
